--- a/hotel page/hotel.css
+++ b/hotel page/hotel.css
@@ -122,13 +122,6 @@ p{
     .filters ul li:not(:nth-child(1)){
         margin-left: 5px;
     }
-    .booking-tags{
-        padding: 0 5px;
-    }
-    .booking-tags li {
-    width: 85px;
-    height: 30px;
-    }
 }
 
 /* ================================== End header ================================== */
@@ -137,7 +130,6 @@ p{
 .sidebar{
     position: fixed;
     z-index: 9999;
-    top: 0;
     width: 240px;
     height: calc(100vh - 80px);
     background-color: #0A69DA;
@@ -145,6 +137,7 @@ p{
     padding: 16px 20px;
     border-radius: 8px;
     transition: 0.3s;
+    top: 0;
     overflow: hidden;
 }
 .sidebar::before{
@@ -316,32 +309,33 @@ font-size: 11px;
     background-color: #F3F4F4;
     padding: 35px 40px 38px 38px;
 }
-.booking-tags{
-    display: flex;
-    align-items: center;
-}
-.booking-tags li{
-    width: 100px;
-    height: 37px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    color: #353F65;
-    border-radius: 180px;
-    cursor: pointer;
-}
-.active-tag{
-    background-color: rgba(227, 230, 237, 0.509);
-}
-.booking-tags li:not(:first-child){
-    margin-left: 40px;
-}
+
 .flight-info{
     margin-top: 33px;
 }
 .booking-data{
     margin-top: 38px;
+}
+.booking-data>:first-child{
+    width: 100%;
+    max-width: 300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+.checkbox-form{
+    display: flex;
+    align-items: center;
+}
+#terms{
+    width: 24px;
+    height: 24px;   
+}
+.terms{
+    font-size: 14px;
+    color: #2E3758;
+    margin-left: 8px;
+    font-weight: 500;
 }
 .flight-info,.booking-data{
     display: flex;
@@ -429,9 +423,6 @@ font-size: 11px;
 }
 
 @media(max-width:576px){
-    .booking-tags li:not(:first-child){
-        margin-left: 0;
-    }
     .booking-info-card{
         padding: 15px 0px;
     }
@@ -457,7 +448,6 @@ font-size: 11px;
     display: none;
   }
 .special-offer{
-    margin-top: 42px;
     min-height: 250px;
     margin-left: 25%;
     overflow-x: auto;
@@ -483,65 +473,74 @@ font-size: 11px;
   }
   
   .offer-card {
-    max-width: 462px;
-    height: 188px;
+    max-width: 350px;
+    height: 240px;
     background: #FFFFFF;
     border-radius: 16px;
     position: relative;
-    padding: 24px;
     margin-left: 30px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
   }
-  .offer-card>:nth-child(2) {
+.swiper-slide-1 >:first-child,.swiper-slide-2 >:first-child,.swiper-slide-3 >:first-child{
+    position: relative;
+    width: 350px;
+    height: 240px;
+}
+.swiper-slide-1 >:first-child::before,.swiper-slide-2 >:first-child::before,.swiper-slide-3 >:first-child::before{
+    content: "";
     width: 100%;
-    margin-left: 30px;
-  }
-  .offer-card>:nth-child(2)>:first-child{
-    color: #596181;
-    font-size: 12px;
-    opacity: 0.5;
-    text-transform: uppercase;
-  }
-  .offer-card>:nth-child(2)>:nth-child(2){
-    color: #475073;
-    font-size: 18px;
-  }
-  .offer-card>:nth-child(2)>:nth-child(3){
-    color: #596181;
-    font-size: 12px;
-    opacity: 0.9;
-  }
-  .offer-card>:nth-child(2)>:last-child{
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: -9999;
+    border-radius: 18px;
+}
+.swiper-slide-1 >:first-child::before{
+    background-image: url(../images/country-1.png);
+}
+.swiper-slide-2 >:first-child::before{
+    background-image: url(../images/country-2.png);
+}
+.swiper-slide-3 >:first-child::before{
+    background-image: url(../images/country-3.png);
+}
+.slide-content{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-  }
-  .offer-card>:nth-child(2)>:last-child a{
-    width: 98px;
-    height: 32px;
+    padding: 30px;
+    height: 100%;
+    width: 100%;
+}
+.slide-content>:first-child>:first-child{
+    font-size: 11px;
+    color: white;
+}
+.slide-content>:first-child>:nth-child(2){
+    font-size: 24px;
+    color: white;
+}
+.slide-content>:nth-child(2){
     display: flex;
-    justify-content: center;
     align-items: center;
-    border-radius: 180px;
-    background-color: rgba(223, 20, 45, 6%);
-    color: #DF142D;
-    font-size: 12px;
-  }
-  .cupon>:first-child{
-    color: #6C738F;
-  }
-  .cupon>:nth-child(2){
-    color: #475073;
-    margin-left: 2px;
-  }
-  .opinions .swiper-slide-active {
-    opacity: 1;
-    margin-top: 0px;
-  }
-
-  
+}
+.slide-content>:nth-child(2)>:nth-child(2){
+    margin-left: 14px;
+}
+.slide-content>:nth-child(2)>:nth-child(2)>:first-child{
+    font-size: 22px;
+    color: white;
+}
+.slide-content>:nth-child(2)>:nth-child(2)>:nth-child(2){
+    font-size: 16px;
+    color: #C1D4DA;
+}
   @media (max-width: 576px) {
     .offers-slide-container {
         min-width: auto;
@@ -551,24 +550,19 @@ font-size: 11px;
     .offer-card {
       width:100%;
       margin-left: 10px;
-      padding: 15px;
+      /* padding: 15px; */
     }
-    .offer-card>:nth-child(2)>:last-child{
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        align-content: flex-start;
+    .slide-content{
+        padding: 15px;
+    }
+    .slide-content>:first-child>:first-child{
+        font-size: 12px;
+    }
+    .slide-content>:nth-child(2)>:nth-child(2){
+        margin-left: 8px;
     }
     .swiper-wrapper>:first-child{
         margin-left: 0;
-    }
-    .offer-card>:nth-child(2) {
-        margin-left: 10px;
-    }
-    .offer-card>:nth-child(2)>:last-child a{
-        margin-top:4px;
-        width: 80px;
-        height: 22px;
     }
   }
 /* ================================== End special offer ================================== */
@@ -576,10 +570,10 @@ font-size: 11px;
 /* ================================== Start Best Offer ==================================== */
 .best-offer{
     margin-top: 50px;
-    min-height: 569px;
+    height: auto;
     background-color: #FFFFFF;
     border-radius: 14px;
-    padding: 30px 50px 39px 54px;
+    padding: 30px 50px 30px 54px;
 }
 .best-offer-title{
     display: flex;
@@ -593,125 +587,42 @@ color: #282E44;
 .best-offer-title>:nth-child(2){
     font-size: 18px;
     color: #282E44;
+    opacity: 0.5;
 }
-.best-offer-table{
-    width: 100%;
-    margin-top: 40px;
-    height: auto;
+.offer-container{
+    margin-top: 5px;
 }
-.best-offer-table .tr{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 25px;
-    min-height: 75px;
-    width: 100%;
-}
-.best-offer-table .tr>:first-child{
-    width: 50px;
-    height: 50px;
-}
-.best-offer-container{
-    width: 100%;
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    margin-left: 20px;
-}
-.best-offer-container p{
-    width: 100%;
-}
-.book-now{
-    width: 152px;
-    height: 42px;
+.offer-ele{
+    width: 285px;
+    height: 74px;
+    background-color: #F8F9FA;
+    margin: 10px auto;
     border-radius: 180px;
     display: flex;
-    justify-content: space-around;
     align-items: center;
+}
+.offer-ele>:nth-child(2){
+    margin-left: 20px;
+}
+.offer-ele>:nth-child(2)>:first-child{
+    font-size: 18px;
     color: #282E44;
-    padding: 0 10px;
 }
-.book-now:hover{
-    color: #282E44;
-}
-.best-offer-table .tr>:first-child{
-    width: 50px;
-}
-.tr .active{
-    background-color: #163668;
-    color: white;
-}
-@media (max-width:1200px){
-    .best-offer-table .tr{
-        margin-left: 10px;
-        font-size: 12px;
-    }
-    /* .best-offer-container */
-    .book-now{
-        width: 115px;
-        height: 40px;
-        font-size: 12px;
-        padding: 0 5px;
-    }
-    .price{
-        width: fit-content !important;
-        margin-right: 20px;
-    }
-    .date,.best-offer-container>:first-child{
-        max-width: 172px !important;
-    }
-}
+.offer-ele>:nth-child(2)>:nth-child(2){
+    font-size: 14px;
+    color: #475073;
+    opacity: 70%;
+}   
+
+
+
 @media (max-width:992px){
     .best-offer{
         padding: 20px;
     }
-    .best-offer-container{
-        margin-left: 5px;
-    }
-    .best-offer-table .tr{
-        margin-left: 5px;
-        font-size: 11px;
-    }
-    .book-now{
-        width: 115px;
-        height: 30px;
-        font-size: 11px;
-        padding: 0 2px;
-    }
-    .price{
-        width: fit-content !important;
-        margin-right: 5px;
-    }
-    .best-offer-container>:first-child{
-        max-width: 172px !important;
-    }
-    .date{
-        max-width: 96px !important;
-    }
-    .tr >:first-child{
-        width: 25px !important;
-        height: 25px !important;
-    }
 }
 @media (max-width:768px){
-    .tr >:first-child{
-        width: 50px !important;
-        height: 50px !important;
-    }
-    .best-offer-table{
-        overflow: auto;
-    }
-    .best-offer-table .tr{
-        min-width: 500px;
-        overflow: scroll;
-        cursor: grab;
-    }
-    .best-offer{
-        min-height: calc(569px - 125px);
-    }
-    .best-offer-container{
-        margin-left: 15px;
-    }
+
 }
 /* ================================== End Best Offer ==================================== */
 
@@ -720,15 +631,14 @@ footer{
     margin-top: 50px;
     width: 100%;
     min-height: 205px;
-    background-image: url(../images/Illustration.svg);
+    background-image: url(../images/footer.svg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: bottom;
     border-radius: 14px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #FFC54D;
     margin-bottom: 55px;
     padding: 56px 40px 42px 51px;
 }
@@ -744,12 +654,12 @@ footer>:first-child >:nth-child(2){
 }
 footer>:first-child >:nth-child(2) span{
     font-size: 48px;
-    color: #DF142D;
+    color: #FFC54D;
 }
 footer>:first-child >:nth-child(2) p{
     opacity: 0.5;
     font-size: 16px;
-    color: #DF142D;
+    color: #FFCB60;
     margin-left: 14px;
     margin-top: 20px;
 }
@@ -764,7 +674,6 @@ footer>:nth-child(2) a{
 }
 @media (max-width:1200px) {
     footer{
-        background-size: 180px;
         background-position: 64% 100%;
         margin-top: 25px;
         margin-bottom: 0px;
@@ -793,6 +702,11 @@ footer>:nth-child(2) a{
     }
     footer>:first-child >:nth-child(2) p{
         font-size: 12px;
+    }
+}
+@media(max-width:576px){
+    footer>:first-child{
+        margin-bottom: 30px;
     }
 }
 /*  ================================== End footer ==================================== */
